--- a/src/components/OrderSteps/OrderSteps.module.scss
+++ b/src/components/OrderSteps/OrderSteps.module.scss
@@ -138,6 +138,11 @@
   font-size: 14px;
   line-height: 16px;
 
+  &_col {
+    display: flex;
+    flex-direction: column;
+  }
+
   &__label>&__input {
     position: absolute;
     z-index: -1;
@@ -162,7 +167,8 @@
 
   &__label>span {
     cursor: pointer;
-    margin: 0px 8px;
+    margin-right: 16px;
+    margin-bottom: 8px;
     display: inline-flex;
     align-items: center;
     user-select: none;
@@ -184,6 +190,86 @@
       background-repeat: no-repeat;
       background-position: center center;
       background-size: 50% 50%;
+      transition: all $animation-speed $animation-type;
+    }
+  }
+}
+
+.checkboxInputs {
+  @include Roboto-light;
+  font-size: 14px;
+  line-height: 16px;
+
+  &_col {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__label>&__input {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+
+    &:checked+span::before {
+      border-color: $color-accent;
+    }
+
+    &:checked+span::after {
+      background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='13' height='10' viewBox='0 0 13 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill-rule='evenodd' clip-rule='evenodd' d='M1.625 3.33333L0 5L4.875 10L13 1.66667L11.375 0L4.875 6.66667L1.625 3.33333Z' fill='%23121212'/%3e%3c/svg%3e ");
+    }
+
+    &:not(:checked)+span::before {
+      box-shadow: none;
+    }
+
+    &:checked+span {
+      color: $color-main;
+    }
+  }
+
+  &__label>span {
+    position: relative;
+    cursor: pointer;
+    margin-right: 16px;
+    margin-bottom: 8px;
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+    color: $color-additional-dark;
+    transition: all $animation-speed $animation-type;
+
+    &::before {
+      content: '';
+      cursor: pointer;
+      display: inline-block;
+      width: 12px;
+      height: 12px;
+      flex-shrink: 0;
+      flex-grow: 0;
+      border: 1px solid $color-additional-dark;
+      margin-right: 0.5em;
+      margin-bottom: 1px;
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: 100%;
+      transition: all $animation-speed $animation-type;
+    }
+
+    &::after {
+      content: '';
+      cursor: pointer;
+      position: absolute;
+      bottom: 5px;
+      left: 4px;
+      display: inline-block;
+      z-index: 1;
+      flex-shrink: 0;
+      flex-grow: 0;
+      width: 13px;
+      height: 10px;
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: 100%;
       transition: all $animation-speed $animation-type;
     }
   }
@@ -260,5 +346,26 @@
 
   &~& {
     margin-top: 32px;
+  }
+
+  &+.textInputs {
+    @include Roboto-light;
+    color: $color-main;
+    font-size: 14px;
+    line-height: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 250px;
+
+    &>label>.orderpage__input {
+      width: 224px;
+
+      @media (max-width: $max-mobile) {
+        width: 224px;
+      }
+    }
+
+
   }
 }
